# threads-agent

./: .dev-aliases  .dev-insights.json  .dockerignore  .gitignore  .gitignore.agents  .gitmessage  .learning-hooks.sh  .pre-commit-config.yaml  .tdd-prompt.txt  .watch-dev.sh  ACHIEVEMENT_COLLECTOR_INTEGRATION_PLAN.md  ACHIEVEMENT_SYSTEM_STATUS.md  ACHIEVEMENT_TRACKER_CHANGES.md  ACHIEVEMENT_TRACKER_FIX.md  AGENT_FOCUS.md.backup.20250815_193027  AI_ENHANCED_ACHIEVEMENT_SYSTEM.md  AI_INTEGRATED_WORKFLOW.md  AI_JOB_STRATEGY.md  AI_JOB_STRATEGY_EPICS_SUMMARY.md  AI_JOB_WEEK1_COMPLETION.md  AI_JOB_WEEK1_SUMMARY.md  AI_Job_Strategy_v5.md  AI_MONITORING_IMPLEMENTATION.md  AI_POWERED_WORKFLOW.md  BLOG_AUTOMATION_INTEGRATION.md  BLOG_AUTOMATION_PLAN.md  BUSINESS_VALUE_ENHANCEMENT.md  CI_ARCHITECTURE_ANALYSIS_REPORT.md  CI_MONITOR_README.md  CI_OPTIMIZATION_ANALYSIS.md  CI_QUICK_FIX_GUIDE.md  CLAUDE.md  CLAUDE_AGENTS_SETUP_GUIDE.md  CLAUDE_CODE_GUIDE.md  CLAUDE_HOOKS_INTEGRATION.md  COMPLETE_RECORDING_GUIDE.md  CONTRIBUTING.md  CRA-232-IMPLEMENTATION-SUMMARY.md  CRA-235-TECHNICAL-DOCUMENTATION.md  CRA-283_AUTO_FINE_TUNING_TECHNICAL_DOCUMENTATION.md  (+179 more)
.achievements/: pr_102_achievement.json  pr_105_achievement.json  pr_91_achievement.json  pr_93_achievement.json  pr_94_achievement.json
.business-intelligence/: config.json
.claude/: custom-commands.json  instructions.md  mcp-config-temp.json  mcp-config.json  mcp-config.json.backup.20250729_124801  (+2 more)
.claude-reviews/: prompt-20250721_004855.txt
.claude-sessions/: session_claude-20250722-002237-rasY4g.json  session_log.json
(+3133 files in other folders)
